<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>
    
    <groupId>com.cloudcompilerr</groupId>
    <artifactId>spring-ai-showcase</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Spring AI Showcase</name>
    <description>Comprehensive Spring AI application demonstrating various AI capabilities</description>
    
    <modules>
        <module>core</module>
        <module>prompt-engineering</module>
        <module>rag</module>
        <module>vector-db</module>
        <module>mcp</module>
        <module>api</module>
        <module>service</module>
        <module>demo</module>
    </modules>
    
    <properties>
        <java.version>21</java.version>
        <spring-ai.version>1.0.0</spring-ai.version>
        <spring-boot.version>3.2.5</spring-boot.version>
        <lombok.version>1.18.32</lombok.version>
        <pgvector.version>0.2.1</pgvector.version>
        <jts.version>1.19.0</jts.version>
        <junit-jupiter.version>5.10.2</junit-jupiter.version>
        <mockito.version>5.10.0</mockito.version>
    </properties>
    
    <dependencyManagement>
        <dependencies>
            <!-- Spring AI -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-core</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-pgvector-store</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-chroma-store</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            
            <!-- Vector DB -->
            <dependency>
                <groupId>io.hypersistence</groupId>
                <artifactId>hypersistence-utils-hibernate-62</artifactId>
                <version>3.7.0</version>
            </dependency>
            <dependency>
                <groupId>com.pgvector</groupId>
                <artifactId>pgvector</artifactId>
                <version>${pgvector.version}</version>
            </dependency>
            
            <!-- Project modules -->
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>prompt-engineering</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>rag</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>vector-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>mcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudcompilerr</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>